tests/fail/mixed-covariance-misuse.stderr
error: lifetime may not live long enough
  --> tests/fail/mixed-covariance-misuse.rs:16:5
   |
13 | fn lengthen<'b, 'short, 'long: 'short>(
   |                 ------  ----- lifetime `'long` defined here
   |                 |
   |                 lifetime `'short` defined here
...
16 |     short_short
   |     ^^^^^^^^^^^ function was supposed to return data with lifetime `'long` but it is returning data with lifetime `'short`
   |
   = help: consider adding the following bound: `'short: 'long`
